# usepr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.yml
src/usepr/: __init__.py
src/usepr/cli/: usecli.config.toml
src/usepr/cli/commands/: generate_command.py
src/usepr/cli/templates/: command.py.j2
src/usepr/cli/themes/: title.txt
src/usepr/configs/: dspy.py
src/usepr/modules/: pull_request_summary_generator.py
src/usepr/services/: pr_summary_service.py
src/usepr/signatures/: pull_request_summary_generator.py
src/usepr/utils/: git.py  github.py
tests/: conftest.py  smoke_test.py  test_dspy_config.py  test_git.py  test_github.py  test_module.py  test_pr_summary_service.py
