[project]
name = "usepr"
version = "0.1.4"
description = "AI-powered PR summary generator for Git repositories"
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "dspy>=3.2.1",
  "pyperclip>=1.11.0",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.26.7",
  "usecli>=0.1.68",
]

[project.scripts]
usepr = "usecli:main"
[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "isort>=8.0.1",
  "poethepoet>=0.46.0",
  "pytest>=9.1.1",
  "ruff>=0.15.18",
  "ty>=0.0.51",
  "usechange>=0.1.43",
]

[tool.deptry]
known_first_party = ["usepr"]

[project.urls]
Homepage = "https://github.com/thememium/usepr"
Documentation = "https://github.com/thememium/usepr"
Repository = "https://github.com/thememium/usepr.git"
Issues = "https://github.com/thememium/usepr/issues"
Changelog = "https://github.com/thememium/usepr/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*prefix.*:DeprecationWarning:dspy.*"]

[tool.ty]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.ty.rules]
# Ty uses rule = "level" format (error, warn, ignore)
# See all rules at: https://docs.astral.sh/ty/reference/rules/

[tool.poe.tasks]
dev = "uv run usepr"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
